# infotecs-cpp

./: echo  test.sh
executables/: progone  progtwo
progone/: CMakeLists.txt  conf_run.sh
progone/include/: Buffer.h  CharCount.h  ipc_interaction.h
progone/src/: main.cpp
progtwo/: CMakeLists.txt  conf.sh  conf_run.sh
progtwo/include/: ipc_interaction.h
progtwo/src/: main.cpp
